lib/rl_bindings.h

void ImageDrawRectangleV_(Image *a, Vector2 *b, Vector2 *c, Color *d);
void ImageDrawRectangleRec_(Image *a, Rectangle *b, Color *c);
void ImageDrawRectangleLines_(Image *a, Rectangle *b, int c, Color *d);
void ImageDraw_(Image *a, Image *b, Rectangle *c, Rectangle *d, Color *e);
void ImageDrawText_(Image *a, char *b, int c, int d, int e, Color *f);
void ImageDrawTextEx_(Image *a, Font *b, char *c, Vector2 *d, float e, float f, Color *g);
Texture *LoadTexture_(char *a);
Texture *LoadTextureFromImage_(Image *a);
Texture *LoadTextureCubemap_(Image *a, int b);
RenderTexture *LoadRenderTexture_(int a, int b);
bool IsTextureReady_(Texture* a);
void UnloadTexture_(Texture *a);
bool IsRenderTextureReady_(RenderTexture* a);
void UnloadRenderTexture_(RenderTexture *a);
void UpdateTexture_(Texture *a, const void *b);
void UpdateTextureRec_(Texture *a, Rectangle *b, const void *c);
void SetTextureFilter_(Texture *a, int b);
void SetTextureWrap_(Texture *a, int b);
void DrawTexture_(Texture *a, int b, int c, Color *d);
void DrawTextureV_(Texture *a, Vector2 *b, Color *c);
void DrawTextureEx_(Texture *a, Vector2 *b, float c, float d, Color *e);
void DrawTextureRec_(Texture *a, Rectangle *b, Vector2 *c, Color *d);
void DrawTexturePro_(Texture *a, Rectangle *b, Rectangle *c, Vector2 *d, float e, Color *f);
void DrawTextureNPatch_(Texture *a, NPatchInfo *b, Rectangle *c, Vector2 *d, float e, Color *f);
Color *Fade_(Color *a, float b);
int ColorToInt_(Color *a);
Vector4 *ColorNormalize_(Color *a);
Color *ColorFromNormalized_(Vector4 *a);
Vector3 *ColorToHSV_(Color *a);
Color *ColorFromHSV_(float a, float b, float c);
Color *ColorAlpha_(Color *a, float b);
Color *ColorAlphaBlend_(Color *a, Color *b, Color *c);
Color *GetColor_(unsigned int a);
Color *GetPixelColor_(void *a, int b);
void SetPixelColor_(void *a, Color *b, int c);
Font *GetFontDefault_();
Font *LoadFont_(char *a);
Font *LoadFontEx_(char *a, int b, int *c, int d);
Font *LoadFontFromImage_(Image *a, Color *b, int c);
Font *LoadFontFromMemory_(char *a, unsigned char *b, int c, int d, int *e, int f);
Image *GenImageFontAtlas_(GlyphInfo *a, Rectangle **b, int c, int d, int e, int f);
bool IsFontReady_(Font* a);
void UnloadFont_(Font *a);
int ExportFontAsCode_(Font *a, char *b);
void DrawText_(char *a, int b, int c, int d, Color *e);
void DrawTextEx_(Font *a, char *b, Vector2 *c, float d, float e, Color *f);
void DrawTextPro_(Font *a, char *b, Vector2 *c, Vector2 *d, float e, float f, float g, Color *h);
void DrawTextCodepoint_(Font *a, int b, Vector2 *c, float d, Color *e);
void DrawTextCodepoints_(Font *a, int *b, int c, Vector2 *d, float e, float f, Color *g);
Vector2 *MeasureTextEx_(Font *a, char *b, float c, float d);
int GetGlyphIndex_(Font *a, int b);
GlyphInfo *GetGlyphInfo_(Font *a, int b);
Rectangle *GetGlyphAtlasRec_(Font *a, int b);